--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -21,10 +21,14 @@
     display: flex; 
     flex-direction: column; 
     overflow: scroll;
-    scrollbar-width: none;
-    //overflow: hidden; /* Hide scrollbars */
     &::-webkit-scrollbar {
-      display: none;
+      width: 5px;
+    } 
+    &::-webkit-scrollbar-thumb {
+      background-color: grey; /* color of the scroll thumb */
+      border-radius: 20px; /* roundness of the scroll thumb */
+      border: 3px; /* creates padding around scroll thumb */
+      margin-left: 10px;
     }
   } 
   
